--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "nodemon": "^2.0.22"
   }
 }
