--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.3.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-geocoder": "^4.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "colors": "^1.4.0",
