--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
