--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "duykhanhtrandev",
+  "name": "codecamp-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,6 +22,7 @@
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.3",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
