--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.1",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "colors": "^1.4.0",
